# t9os

./: .gitattributes  .gitignore  BIBLE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  QUICKSTART.md  README.md  SECURITY.md  logs  pyproject.toml  t9_seed.py  t9_viz.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
artifacts/: AT1_ISOMORPHISM_INSIGHT.md  ISOMORPHISM_RESEARCH_SURVEY.md  STRUCTURAL_ISOMORPHISM_FRAMEWORK.md  T9OS_V2_PLAN.md  T9OS_V2_RESEARCH_SYNTHESIS.md  T9OS_V2_SUMMARY.md
constitution/: DEPLOY_CHECKLIST.md  GUARDIANS.md  L1_execution.md  L2_interpretation.md  L3_amendment.md  orient_routes.yaml
decisions/: 001-use-sqlite-entity-store.md  002-simondon-phase-transition-model.md  003-three-tier-constitution.md  004-guardian-seven-tier.md  005-gemini-batch-guardian.md  006-session-claim-release.md  007-seed-engine-single-entry.md  008-search-reuse-buy-build.md  009-preindividual-inbox-pattern.md  010-pipeline-registry-table.md  011-hotl-autonomy-matrix.md  012-data-integrity-verification.md  013-telegram-bot-silent-mode.md  014-architecture-dashboard.md  015-adr-simondon-mapping.md  016-resurface-sediment.md  017-t9d-refresh-integrity-merge.md  018-hanbeen-architecture-init.md  020-live-data-no-hardcoding.md  022-infra-status-monitoring.md  023-google-calendar-direct-api.md  024-wsl-ubuntu-single-cli.md  026-gitignore-archive-sedimentation.md  027-cc-controltower-role-designation.md  028-l2u-to-t9agent-telegram.md  029-notion-archive-db-separation.md  030-pm3-paper-mill-pipeline.md  031-t9os-v02-simondon-overhaul.md  032-odnar-ontology-engine-pivot.md  033-ux-five-principles-zero-decision.md  034-t9bot-python-rewrite.md  035-seed-engine-binary-file-support.md  036-finbot-model-switch-qwen.md  (+35 more)
(+126 files in other folders)
