[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "t9os"
version = "0.3.0"
description = "A Simondonian AI operating system for life orchestration"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Hanbeen Moon" }]
keywords = ["ai", "operating-system", "simondon", "individuation", "life-management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0",
]

[project.optional-dependencies]
telegram = ["python-telegram-bot>=20.0"]
calendar = ["google-api-python-client", "google-auth-oauthlib"]
gemini = ["google-generativeai>=0.5"]
all = ["t9os[telegram,calendar,gemini]"]
dev = ["pytest>=7.0", "ruff>=0.4"]

[project.scripts]
t9 = "t9os.cli:app"

[project.urls]
Homepage = "https://github.com/hanbeen-moon/t9os"
Documentation = "https://github.com/hanbeen-moon/t9os/tree/main/docs"
Repository = "https://github.com/hanbeen-moon/t9os"
Issues = "https://github.com/hanbeen-moon/t9os/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/t9os"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
